--- a/evenou-IMF-Desktop-App/Credits/CreditsView.xaml
+++ b/evenou-IMF-Desktop-App/Credits/CreditsView.xaml
@@ -11,12 +11,84 @@
         <custns:CreditViewModel x:Key="CreditViewModelObj" />
     </UserControl.Resources>
     
-    <Grid>
-        <Grid.RowDefinitions>
+    <Grid DataContext="{Binding Mode=OneWay, Source={StaticResource CreditViewModelObj}}">
+        <!--<Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Button Content="{Binding Credits[0].Id, Source={StaticResource CreditViewModelObj}, ValidatesOnNotifyDataErrors=True}" />
-        <Button Grid.Row="1" Content="{Binding Credits[1].Id, Source={StaticResource CreditViewModelObj}, ValidatesOnNotifyDataErrors=True}" />
+        <Button Content="{Binding Credits[0].Amount}" 
+                Margin="20" Style="{Binding Mode=OneWay, Source={StaticResource outlineBtn}}"/>
+        <Button Grid.Row="1" Content="{Binding Credits[1].Amount}"
+                Margin="20" Style="{Binding Mode=OneWay, Source={StaticResource outlineBtn}}"/>-->
+        <DataGrid ItemsSource="{Binding Credits}" AutoGenerateColumns="False">
+            
+            <DataGrid.GridLinesVisibility>None</DataGrid.GridLinesVisibility>
+            <DataGrid.Resources>
+                <!-- Remove background color -->
+                <SolidColorBrush x:Key="DataGridBackgroundBrush" Color="Transparent" />
+                <Style TargetType="DataGrid">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="BorderThickness" Value="0" />
+                </Style>
+
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Border BorderBrush="DeepSkyBlue" BorderThickness="1" CornerRadius="5" Margin="2" Padding="5">
+                                    <TextBlock Text="{Binding Content, RelativeSource={RelativeSource TemplatedParent}}" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+                <Style TargetType="DataGridColumnHeadersPresenter">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Border BorderBrush="Blue" BorderThickness="0,2,0,2" CornerRadius="5" Margin="0,3,0,3" Padding="0,5,0,5">
+                                    <ItemsPresenter />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+
+                <Style TargetType="DataGridRowHeader">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="BorderThickness" Value="0" />
+                </Style>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Background" Value="Transparent" />
+                </Style>
+
+                <Style TargetType="DataGridCell">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Border BorderBrush="LightBlue" BorderThickness="1" CornerRadius="5" Margin="2" Padding="5">
+                                    <TextBlock Text="{Binding Content.Text, RelativeSource={RelativeSource TemplatedParent}}" />
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.Resources>
+
+            <DataGrid.Columns>
+                <!--<DataGridTemplateColumn Header="ID">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Border BorderBrush="Red" BorderThickness="1" CornerRadius="5">
+                                <TextBlock Text="{Binding Id}" Margin="5" />
+                            </Border>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+
+                <DataGridTextColumn Header="ID" Binding="{Binding Id}" />
+                <DataGridTextColumn Header="Amount" Binding="{Binding Amount}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
